added styling and navbar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 		</style>
 	</head>
 	<body>
-		<h1 id="intro">i am <span>khalilah</span></h1>
+		<h1 class="intro">i am <span>khalilah</span></h1>
 		<h3>these are my projects</h3>
+		<div id="nav">
+			<a href="shrimpsoup.html">shrimp soup</a>
+			<a href="CAT.html">CAT</a>
+			<a href="musicalGarden.html">musical garden</a>
+			<a href="heyPunkin.html">hey, punkin!</a>			
+		</div>
 	</body>
 </html>
