added some links to my stuff, more styling

--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Portfolio I</title>
-		<link href="style.css", rel="stylesheet">
-		<style>
-			@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
-		</style>
-	</head>
-	<body>
+
+<head>
+	<title>Portfolio I</title>
+	<link href="style.css" , rel="stylesheet">
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+	</style>
+</head>
+
+<body>
+	<div class="name">
 		<h1 class="intro">i am <span>khalilah</span></h1>
-		<h3>these are my projects</h3>
-		<div id="nav">
-			<a href="shrimpsoup.html">shrimp soup</a>
-			<a href="CAT.html">CAT</a>
-			<a href="musicalGarden.html">musical garden</a>
-			<a href="heyPunkin.html">hey, punkin!</a>			
-		</div>
-	</body>
+
+	</div>
+	<h3>these are my projects</h3>
+	<div id="nav">
+		<p>
+			<a id="shrimp" href="shrimpsoup.html">shrimp soup</a> |
+			<a id="cat" href="CAT.html">CAT</a>|
+			<a id="garden" href="musicalGarden.html">musical garden</a>|
+			<a id="punkin" href="heyPunkin.html">hey, punkin!</a>
+		</p>
+	</div>
+	<br>
+	<br>
+	<p><a target="_blank"href="https://github.com/kubitsss">github</a> & <a target="_blank"href="https://devpost.com/khalilah223?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">devpost</a></p>
+
+
+</body>
+
 </html>
