--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
 	<div class="name">
 		<h1 class="intro">i am <span>khalilah</span></h1>
-
 	</div>
+
 	<h3>these are my projects</h3>
+
 	<div id="nav">
 		<p>
 			<a id="shrimp" href="shrimpsoup.html">shrimp soup</a> |
@@ -23,11 +24,14 @@
 			<a id="punkin" href="heyPunkin.html">hey, punkin!</a>
 		</p>
 	</div>
+
 	<br>
 	<br>
-	<p><a target="_blank"href="https://github.com/kubitsss">github</a> & <a target="_blank"href="https://devpost.com/khalilah223?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">devpost</a></p>
+	<p><a target="_blank" href="https://github.com/kubitsss">github</a> & <a target="_blank"
+			href="https://devpost.com/khalilah223?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">devpost</a>
+	</p>
 
-
+	
 </body>
 
 </html>
