added about section and images expand on hover

--- a/index.html
+++ b/index.html
@@ -14,24 +14,25 @@
 		<h1 class="intro">i am <span>khalilah</span></h1>
 	</div>
 
-	<h3>these are my projects</h3>
+	<div class="stuff">
+		<h3>these are my projects</h3>
+		<div id="nav">
+			<p>
+				<a id="shrimp" href="shrimpsoup.html">shrimp soup</a> |
+				<a id="cat" href="CAT.html">CAT</a>|
+				<a id="garden" href="musicalGarden.html">musical garden</a>|
+				<a id="punkin" href="heyPunkin.html">hey, punkin!</a>
+			</p>
+		</div>
 
-	<div id="nav">
-		<p>
-			<a id="shrimp" href="shrimpsoup.html">shrimp soup</a> |
-			<a id="cat" href="CAT.html">CAT</a>|
-			<a id="garden" href="musicalGarden.html">musical garden</a>|
-			<a id="punkin" href="heyPunkin.html">hey, punkin!</a>
+		<br>
+		<br>
+		<p><a target="_blank" href="https://github.com/kubitsss">github</a> & <a target="_blank"
+				href="https://devpost.com/khalilah223?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">devpost</a>
 		</p>
 	</div>
 
-	<br>
-	<br>
-	<p><a target="_blank" href="https://github.com/kubitsss">github</a> & <a target="_blank"
-			href="https://devpost.com/khalilah223?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">devpost</a>
-	</p>
 
-	
 </body>
 
 </html>
