--- a/shrimpsoup.html
+++ b/shrimpsoup.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>CAT</title>
-		<link href="style.css" rel="stylesheet">
-	</head>
-	<body>
-		<h1>this is <span>shrimp soup</span></h1>
-	</body>
+
+<head>
+	<title>shrimp soup</title>
+	<link href="style.css" rel="stylesheet">
+</head>
+
+<body>
+	<p style="text-align: left;"><a href="/index.html">go back</a></p>
+	<h1>this is <span>shrimp soup</span></h1>
+	<div class="about">
+		<h3>about</h3>
+		<p>&emsp;Shrimp Soup is a cooking game where the player helps customers with their problems by making them
+			magical soups. Each customer has likes and dislikes, which are randomized at the start of each play through.
+			By learning what ingredients certain customers prefer, the player can make the best soups possible!</p>
+		<p>&emsp;Shrimp Soup, as it stands now, is more of a demo than finished game. The finished Shrimp Soup will have
+			a "final boss" at the end of a week of working at the soup shop. Skills the player has acquired during the
+			week (including player preferences and ingredient effects) will culminate. We also hope to add money to the
+			game, so the player can be paid extra for good soups, and use that money to buy ingredients or maybe even
+			decor. We also want to add a guide with hints that will help the player figure out what effects each
+			ingredient has.</p>
+	</div>
+	<br>
+	<div class="pics">
+		<h3>media</h3>
+		<img src="media/Screenshot 2024-06-09 094215.png">
+		<img src="media/Screenshot 2024-06-09 140906.png">
+		<img src="media/Screenshot 2024-06-09 141051.png">
+	</div>
+
+
+</body>
+
 </html>
