--- a/shrimpsoup.html
+++ b/shrimpsoup.html
@@ -11,21 +11,21 @@
 	<h1>this is <span>shrimp soup</span></h1>
 	<div class="about">
 		<h3>about</h3>
-		<p>&emsp;Shrimp Soup is a cooking game where the player helps customers with their problems by making them
+		<p>&emsp;<em>Shrimp Soup</em> is a cooking game where the player helps customers with their problems by making them
 			magical soups. Each customer has likes and dislikes, which are randomized at the start of each play through.
 			By learning what ingredients certain customers prefer, the player can make the best soups possible!</p>
-		<p>&emsp;Shrimp Soup, as it stands now, is more of a demo than finished game. The finished Shrimp Soup will have
+		<p>&emsp;<em>Shrimp Soup</em>, as it stands now, is more of a demo than finished game. The finished Shrimp Soup will have
 			a "final boss" at the end of a week of working at the soup shop. Skills the player has acquired during the
 			week (including player preferences and ingredient effects) will culminate. We also hope to add money to the
 			game, so the player can be paid extra for good soups, and use that money to buy ingredients or maybe even
 			decor. We also want to add a guide with hints that will help the player figure out what effects each
-			ingredient has.</p>
-			<br>
+			ingredient has. <b><a class="play" href="https://drive.google.com/file/d/1BZ9V4helU2dTuUlvlmIzEhJTj5R-QIzl/view?usp=sharing">PLAY HERE</a></b></p>
 			<h3>media</h3>
+			
 	</div>
 	<div class="pics">
-		<img src="media/Screenshot 2024-06-09 094215.png">
 		<img src="media/Screenshot 2024-06-09 140906.png">
+		<img src="media/Screenshot 2024-06-09 094215.png">
 		<img src="media/Screenshot 2024-06-09 141051.png">
 	</div>
 
